# File_Search_Engine

./: .gitignore  CMakeLists.txt  Final Task.sln  README.md
Final Task/: Final Task.vcxproj  Final Task.vcxproj.filters  Functions_JSON.ixx  Main.cpp
Final Task/Json/: config.json
Google Test/: Google Test.vcxproj  InvertedIndexTest.cpp  SearchServerTest.cpp
Google_tests/: InverterIndexTest.cpp  SearchServerTest.cpp
include/: ConverterJSON.h  InvertedIndex.h  SearchEngine.h  SearchServer.h
resources/: file001.txt  file002.txt  file003.txt
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchEngine.cpp  SearchServer.cpp  main.cpp
tests/: CMakeLists.txt  InvertedIndex_test.cpp  SearchEngine_test.cpp
